Align bullets and fix header tag styling

--- a/obsidian.css
+++ b/obsidian.css
@@ -451,9 +451,9 @@ Desktop Styling
   background-color: var(--background-primary);
 }
 
+/* Align list bullets */
 .is-live-preview .list-bullet {
-  color: var(--text-faint);
-  padding-right: 5px;
+  bottom: 3px;
 }
 
 .is-live-preview .HyperMD-header-2 {
@@ -465,6 +465,16 @@ Desktop Styling
 /* Temp fix to match Live Preview checkbox color */
 .is-live-preview input[type='checkbox']:checked {
   background-color: #00a8c5 !important;
+}
+
+/* Align checkboxes */
+.markdown-source-view.mod-cm6 .task-list-item-checkbox {
+  vertical-align: sub !important;
+}
+
+/* Align collapse-indicators */
+.is-live-preview .collapse-indicator.collapse-icon {
+  top: 2px !important;
 }
 
 /* ---------------------- */
@@ -673,18 +683,14 @@ span.cm-formatting-highlight {
 
 .theme-light .frontmatter-container .tag,
 .theme-light a.tag {
-  /* background-color: rgb(189, 225, 211); */
   background-color: var(--tag-background-color-l);
   color: var(--tag-font-color-l);
-  /* color: rgb(29, 105, 75); */
   font-size: var(--font-adaptive-smaller);
   font-weight: 500;
   font-family: var(--font-ui);
-  padding: 2px 8px;
-  margin: 2px 0 0 0;
+  padding: 3px 8px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   border-radius: 20px;
 }
 .theme-light a.tag:hover {
@@ -693,18 +699,14 @@ span.cm-formatting-highlight {
 }
 .theme-dark .frontmatter-container .tag,
 .theme-dark a.tag {
-  /* background-color: rgb(29, 105, 75); */
   background-color: var(--tag-background-color-d);
   color: var(--tag-font-color-d);
-  /* color: var(--text-normal); */
   font-size: var(--font-adaptive-smaller);
   font-weight: 500;
   font-family: var(--font-ui);
-  padding: 2px 8px;
-  margin: 2px 0 0 0;
+  padding: 3px 8px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   border-radius: 20px;
 }
 .theme-dark a.tag:hover {
@@ -714,39 +716,29 @@ span.cm-formatting-highlight {
 .theme-light .cm-s-obsidian span.cm-hashtag {
   background-color: var(--tag-background-color-l);
   color: var(--tag-font-color-l);
-  /* background-color: rgb(189, 225, 211);
-  color: rgb(29, 105, 75); */
   font-size: var(--font-adaptive-small);
   font-family: var(--font-ui);
   font-weight: 500;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
-  margin: 2px 0;
-  vertical-align: middle;
-  padding-top: 1px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   border-left: none;
   border-right: none;
-  padding-bottom: 2px;
   cursor: text;
 }
 .theme-dark .cm-s-obsidian span.cm-hashtag {
   background-color: var(--tag-background-color-d);
   color: var(--tag-font-color-d);
-  /* background-color: rgb(29, 105, 75);
-  color: var(--text-normal); */
   font-size: var(--font-adaptive-small);
   font-family: var(--font-ui);
   font-weight: 500;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
-  margin: 2px 0;
-  vertical-align: middle;
-  padding-top: 1px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   border-left: none;
   border-right: none;
-  padding-bottom: 2px;
   cursor: text;
 }
 span.cm-hashtag.cm-hashtag-begin {
@@ -772,9 +764,8 @@ span.cm-hashtag.cm-hashtag-end {
 img {
   border-radius: 4px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  background-color: var(
-    --background-secondary
-  ); /* Background color so PNGs with transparent backgrounds don't look weird */
+  background-color: var(--background-secondary);
+  /* Background color so PNGs with transparent backgrounds don't look weird */
 }
 
 .full-width-media .markdown-preview-view .image-embed img:not([width]),
@@ -2984,6 +2975,12 @@ pre .copy-code-button:hover {
   color: var(--text-muted);
   padding: 5px;
 }
+
+/* Fix editor code indenting */
+/* .HyperMD-codeblock .cm-tab {
+  margin-left: -3px;
+  align-self: left;
+} */
 
 /* Atom coloring */
 /* Source: https://github.com/AGMStudio/prism-theme-one-dark */
